# platxa-agent-generator

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: .recovery_point  LOVABLE_PARITY_RESEARCH.md  PROGRESS.md  SPEC_PROGRESS.md  brand_system_features.json  feature_list.backup-20260109_014657.json  feature_list.backup-20260109_014706.json  feature_list.backup-20260109_015805.json  feature_list.backup-20260109_015817.json  feature_list.backup-20260109_020258.json  feature_list.backup-20260109_020311.json  feature_list.backup-20260109_020856.json  feature_list.backup-20260109_020906.json  feature_list.backup-20260109_021142.json  feature_list.backup-20260109_021154.json  feature_list.backup-20260109_021616.json  feature_list.backup-20260109_021626.json  feature_list.backup-20260109_021901.json  feature_list.backup-20260109_021912.json  feature_list.backup-20260109_022159.json  feature_list.backup-20260109_022209.json  feature_list.backup-20260109_022747.json  feature_list.backup-20260109_022759.json  feature_list.backup-20260109_023037.json  feature_list.backup-20260109_023443.json  feature_list.backup-20260109_024251.json  feature_list.backup-20260109_024304.json  feature_list.backup-20260109_024846.json  feature_list.backup-20260109_024856.json  feature_list.backup-20260109_025358.json  feature_list.backup-20260109_025407.json  feature_list.backup-20260119_184652.json  feature_list.backup-20260119_184731.json  feature_list.backup-20260120_141519.json  feature_list.backup-20260120_141731.json  feature_list.backup-20260120_141800.json  feature_list.backup-20260120_141817.json  feature_list.backup-20260120_141845.json  feature_list.backup-20260120_141916.json  feature_list.backup-20260120_141945.json  (+535 more)
.claude-plugin/: marketplace.json  plugin.json
agents/: architecture-subagent.md  cluster-failures.md  discovery-subagent.md  evaluator-subagent.md  (+10 more)
(+1704 files in other folders)
